--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,15 @@ services:
       dockerfile: app/src/Monarch/Dockerfile
     ports:
       - 8080:8080
+  sqlserver:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      SA_PASSWORD: "Your_password123"
+      ACCEPT_EULA: "Y"
+    ports:
+      - 1433:1433
+    volumes:
+      - sqlserverdata:/var/opt/mssql
+
+volumes:
+  sqlserverdata:
