--- a/app/src/Monapi.Worker/Monapi.Worker.csproj
+++ b/app/src/Monapi.Worker/Monapi.Worker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
   </ItemGroup>
