--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,9 @@ services:
       dockerfile: app/src/Monarch/Dockerfile
     ports:
       - 8080:8080
+    depends_on:
+      sqlserver:
+        condition: service_healthy
     secrets:
       - monarch_sql_monarch_password
   monapi-worker:
