--- a/compose.yaml
+++ b/compose.yaml
@@ -49,6 +49,25 @@ services:
       - monarch_sql_sa_password
       - monarch_sql_monarch_password
       - monarch_sql_monapi_password
+      - monarch_sql_keycloak_password
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KC_DB: mssql
+      KC_DB_URL: jdbc:sqlserver://sqlserver:1433;databaseName=keycloak;encrypt=false;trustServerCertificate=true;
+      KC_DB_USERNAME: keycloak
+      KC_HTTP_ENABLED: 'true'
+    entrypoint: /bin/bash
+    command: -c "export KC_DB_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && export KEYCLOAK_ADMIN_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && /opt/keycloak/bin/kc.sh start-dev"
+    ports:
+      - 80:8080
+    depends_on:
+      sqlserver:
+        condition: service_healthy
+    secrets:
+      - monarch_keycloak_admin
+      - monarch_sql_keycloak_password
 volumes:
   sqlserverdata:
 secrets:
@@ -61,6 +80,9 @@ secrets:
   monarch_sql_monapi_password:
     # external: true
     file: ./.credentials/sql_monapi_password.txt # development only
+  monarch_sql_keycloak_password:
+    # external: true
+    file: ./.credentials/sql_keycloak_password.txt # development only
   monarch_newrelic_api_key:
     # external: true
     file: ./.credentials/newrelic_api_key.txt # development only
@@ -73,3 +95,6 @@ secrets:
   monarch_slack_webhooks:
     # external: true
     file: ./.credentials/slack_webhooks.json # development only
+  monarch_keycloak_admin:
+    # external: true
+    file: ./.credentials/keycloak_admin.txt # development only
