--- a/compose.yaml
+++ b/compose.yaml
@@ -53,15 +53,19 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:latest
     environment:
-      KEYCLOAK_ADMIN: admin
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_DB: mssql
       KC_DB_URL: jdbc:sqlserver://sqlserver:1433;databaseName=keycloak;encrypt=false;trustServerCertificate=true;
       KC_DB_USERNAME: keycloak
       KC_HTTP_ENABLED: 'true'
+      KC_PROXY: 'edge' 
+      KC_HOSTNAME_STRICT: 'false'
     entrypoint: /bin/bash
-    command: -c "export KC_DB_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && export KEYCLOAK_ADMIN_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && /opt/keycloak/bin/kc.sh start-dev"
+    command: -c "export KC_DB_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && export KC_BOOTSTRAP_ADMIN_PASSWORD=$(cat /run/secrets/monarch_keycloak_admin) && /opt/keycloak/bin/kc.sh start-dev"
     ports:
       - 80:8080
+    volumes:
+      - ./keycloak/realm.json:/opt/keycloak/data/import/realm.json
     depends_on:
       sqlserver:
         condition: service_healthy
