Keycloak realm import/export working, implementation in monarch container in progress

--- a/app/src/Monarch/appsettings.json
+++ b/app/src/Monarch/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Keycloak": {
+    "Authority": "http://localhost:80/realms/monarch",
+    "ClientId": "monarch-client",
+    "ClientSecret": "",
+    "Scope": "openid profile email"
+  },
   "AllowedHosts": "*"
 }
