Started work on live UI updates - mostly done, just need ui to read directly from db instead of sample data

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: app/src/Monarch/Dockerfile
     ports:
-      - 80:80
+      - 8080:8080
     secrets:
       - monarch_sql_monarch_password
   monapi-worker:
@@ -54,9 +54,9 @@ secrets:
   monarch_newrelic_api_key:
     # external: true
     file: ./.credentials/newrelic_api_key.txt # development only
-  monarch_nagios_api_key:
+  monarch_nagios_api_details:
     # external: true
-    file: ./.credentials/nagios_api_key.txt # development only
+    file: ./.credentials/nagios_api_details.txt # development only
   monarch_jira_api_key:
     # external: true
     file: ./.credentials/jira_api_key.txt # development only
