Authentication via keycloak native auth working

--- a/app/src/Monarch/appsettings.json
+++ b/app/src/Monarch/appsettings.json
@@ -6,9 +6,10 @@
     }
   },
   "Keycloak": {
-    "Authority": "http://localhost:80/realms/monarch",
+    "Authority": "http://keycloak:8080/realms/monarch",
+    "PublicAuthority": "http://localhost:8081/realms/monarch",
+    "RedirectUri": "http://localhost:8080/signin-oidc",
     "ClientId": "monarch-client",
-    "ClientSecret": "",
     "Scope": "openid profile email"
   },
   "AllowedHosts": "*"
