Initial Jira space set up and infrastructure set up

--- a/app/src/Monapi.Worker/appsettings.json
+++ b/app/src/Monapi.Worker/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Jira": {
+  "BaseUrl": "https://monarchmonitor.atlassian.net",
+  "ProjectKey": "MON",
+  "IssueType": "Incident"
+}
 }
