Monapi simulator up and working. Secret management done properly. Finishing up NewRelicConnector

--- a/app/src/Monapi.Worker/Dockerfile
+++ b/app/src/Monapi.Worker/Dockerfile
@@ -18,4 +18,25 @@ RUN dotnet publish "Monapi.Worker.csproj" -c $configuration -o /app/publish /p:U
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Monapi.Worker.dll"]
+
+
+# --- FOR SIMULATOR ---
+#Can be deleted in production
+
+#Copy the scripts from your local project root to the container
+COPY app/src/Monapi.Worker/start.sh .
+COPY app/src/Monapi.Worker/NewRelic/simulator.sh .
+
+#Switch to root briefly to ensure the scripts are executable, fix line endings, and install curl
+USER root
+
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+RUN sed -i 's/\r$//' start.sh simulator.sh && \
+    chmod +x start.sh simulator.sh
+
+#Switch back to the app user
+USER app
+
+#Changed the ENTRYPOINT to use the manager script, change back to Monapi for production
+ENTRYPOINT ["./start.sh"]
