New Relic API connection completed

--- a/compose.yaml
+++ b/compose.yaml
@@ -47,7 +47,7 @@ services:
       - monarch_newrelic_api_key
       - monarch_nagios_api_details
       - monarch_jira_api_key
-      - monarch_account_number
+      - newrelic_account_number
       - monarch_simulator_api_key
     environment:
       nagios_uri: https://nxi.455garage.com/nagiosxi/ # 1:1 match with external URL in General Program Settings
@@ -125,8 +125,8 @@ secrets:
   monarch_oidc_client_secret:
     # external: true
     file: ./.credentials/oidc_client_secret.txt # development only
-  monarch_account_number: 
+  newrelic_account_number: 
     # external: true
-    file: ./.credentials/monarch_account_number.txt # development only
+  file: ./.credentials/newrelic_account_number.txt # development only
   monarch_simulator_api_key: # development only
     file: ./.credentials/monarch_simulator_api_key.txt
