--- a/compose.yaml
+++ b/compose.yaml
@@ -27,10 +27,17 @@ services:
       context: .
       dockerfile: app/src/Monarch/Dockerfile
     ports:
-      - 8080:8080
+      - 443:443
+    environment:
+      - TLS_CERT: /certificate/cert.crt
+      - TLS_KEY: /certificate/key.crt
     depends_on:
       sqlserver:
         condition: service_healthy
+      monarch-certificate-provider:
+        condition: service_completed_successfully
+    volumes:
+      monarch_certificate:/certificate
     secrets:
       - monarch_sql_monarch_password
       - monarch_oidc_client_secret
@@ -42,6 +49,8 @@ services:
     depends_on:
       sqlserver:
         condition: service_healthy
+      monarch-certificate-provider:
+        condition: service_completed_successfully
     secrets:
       - monarch_sql_monapi_password
       - monarch_newrelic_api_key
@@ -52,16 +61,20 @@ services:
     environment:
       ACCEPT_EULA: "Y"
       MSSQL_SA_PASSWORD_FILE: /run/secrets/monarch_sql_sa_password
-      # MSSQL_TLS_CERT:
-      # MSSQL_TLS_KEY:
-      # MSSQL_TLS_PROTOCOLS: 1.2,1.3
+      MSSQL_TLS_CERT: /certificate/cert.crt
+      MSSQL_TLS_KEY: /certificate/key.crt
+      MSSQL_TLS_PROTOCOLS: 1.2,1.3
     ports:
       - 1433:1433
     volumes:
       - sqlserverdata:/var/opt/mssql
+      - sql_certificate:/certificate
       - ./initdb/setup.sql:/usr/config/setup.sql
       - ./initdb/initdb.sh:/usr/config/initdb.sh
     command: /bin/bash -c "./usr/config/initdb.sh"
+    depends_on:
+      monarch-certificate-provider:
+        condition: service_completed_successfully
     healthcheck:
       test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -N -C -h -1 -t 1 -U SA -P \"$(cat /run/secrets/monarch_sql_sa_password)\" -Q \"SET NOCOUNT ON; SELECT SUM(state) FROM sys.databases\" | tr -d ' \\r\\n' | grep -q '^0$'"]
       interval: 5s
@@ -80,19 +93,56 @@ services:
       KC_HTTP_ENABLED: 'true'
       KC_PROXY: 'edge' 
       KC_HOSTNAME_STRICT: 'false'
+      KC_TLS_ENABLED: 'true'
+      KC_TLS_CERT: /certificate/cert.crt
+      KC_TLS_KEY: /certificate/key.crt
     entrypoint: /bin/bash
     command: -c "export KC_DB_PASSWORD=$(cat /run/secrets/monarch_sql_keycloak_password) && /opt/keycloak/bin/kc.sh import --file /opt/keycloak/data/import/realm.json && /opt/keycloak/bin/kc.sh start-dev"
     ports:
       - 8081:8080
     volumes:
       - ./keycloak/realm.json:/opt/keycloak/data/import/realm.json
+      - keycloak_certificate:/certificate
     depends_on:
       sqlserver:
         condition: service_healthy
+      monarch-certificate-provider:
+        condition: service_completed_successfully
     secrets:
       - monarch_sql_keycloak_password
+  mon-ca:
+    image: smallstep/step-ca
+    networks:
+      - ca-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "https://localhost:9000/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    volumes: mon-ca_config:/home/step
+    environment:
+      - DOCKER_STEPCA_INIT_NAME: "MON-CA"
+      - DOCKER_STEPCA_INIT_DNS_NAMES: "mon-ca"
+      - DOCKER_STEPCA_INIT_PASSWORD_FILE: /run/secrets/mon-ca_key
+    secrets:
+      - mon-ca_key
+  monarch-certificate-provider:
+    image: smallstep/step-cli
+    networks:
+      - ca-net
+    depends_on:
+      mon-ca:
+        condition: service_healthy
+    volumes:
+      - sql_certificate:/certificates/sql
+      - monarch_certificate:/certificates/monarch
+      - keycloak_certificate:/certificates/keycloak
 volumes:
   sqlserverdata:
+  mon-ca_config:
+  sql_certificate:
+  monarch_certificate:
+  keycloak_certificate:
 secrets:
   monarch_sql_sa_password:
     # external: true
@@ -121,3 +171,6 @@ secrets:
   monarch_oidc_client_secret:
     # external: true
     file: ./.credentials/oidc_client_secret.txt # development only
+  mon-ca_key:
+    # external: true
+    file: ./.credentials/mon-ca_key.txt # development only
