--- a/app/src/Monarch/appsettings.json
+++ b/app/src/Monarch/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "Keycloak": {
-    "Authority": "http://keycloak:8080/realms/monarch",
-    "PublicAuthority": "http://localhost:8081/realms/monarch",
-    "RedirectUri": "http://localhost:8080/signin-oidc",
+    "Authority": "https://keycloak:8443/realms/monarch",
+    "PublicAuthority": "https://localhost:8443/realms/monarch",
+    "RedirectUri": "https://localhost:443/signin-oidc",
     "ClientId": "monarch-client",
     "Scope": "openid profile email"
   },
