Changes in place to export public CA cert when needed

--- a/app/src/Monarch/appsettings.json
+++ b/app/src/Monarch/appsettings.json
@@ -7,8 +7,8 @@
   },
   "Keycloak": {
     "Authority": "https://keycloak:8443/realms/monarch",
-    "PublicAuthority": "https://localhost:8443/realms/monarch",
-    "RedirectUri": "https://localhost:443/signin-oidc",
+    "PublicAuthority": "https://keycloak:8443/realms/monarch",
+    "RedirectUri": "https://monarch:443/signin-oidc",
     "ClientId": "monarch-client",
     "Scope": "openid profile email"
   },
