Preliminary admin panel with Jira and Slack integration. New Relic apps are autodiscovered. Test tickets able to be created when workspaces are configured. Automatic Slack notifications go out to specified channels when they are assigned to an application.

--- a/compose.yaml
+++ b/compose.yaml
@@ -58,6 +58,8 @@ services:
     secrets:
       - monarch_sql_monarch_password
       - monarch_oidc_client_secret
+      - monarch_slack_webhooks
+      - monarch_jira_api_key
   monapi-worker:
     image: monapi-worker
     build:
